==================================================================
User visible changes for UPX
==================================================================

Changes in 3.02 (XX XXX 2007):
  * fix unmapping on arm-linux.elf

Changes in 3.01 (31 Jul 2007):
  * new options --no-mode, --no-owner and --no-time to disable preservation
    of mode (file permissions), file ownership and timestamps.
  * dos/exe: fixed an incorrect error message caused by a bug in
    relocation handling
  * new format linux/mipsel supports ELF on [32-bit] R3000
  * fix argv[0] on PowerPC with --lzma
  * bug fixes

Changes in 3.00 (27 Apr 2007):
  * watcom/le & tmt/adam: fixed a problem when using certain filters

Changes in 2.93 beta (08 Mar 2007):
  * new formats Mach/i386 and Mach/fat support Mac OS X i686 and
    Universal binaries [i686 and PowerPC only]
  * dos/exe: LZMA is now also supported for 16-bit dos/exe. Please note that
    you have to explicitly use '--lzma' even for '--ultra-brute' here
    because runtime decompression is about 30 times slower than NRV -
    which is really noticeable on old machines.
  * dos/exe: fixed a rarely occuring bug in relocation handling
  * win32/pe & arm/pe: better icon compression handling

Changes in 2.92 beta (23 Jan 2007):
  * new option '--ultra-brute' which tries even more variants
  * slightly improved compression ratio for some files when
    using '--brute' or '--ultra-brute'
  * bug fixes

Changes in 2.91 beta (29 Nov 2006):
  * assorted bug fixes
  * arm/pe: fix "missing" icon & version info resource problem for wince 5
  * win32/pe & arm/pe: added option --compress-icons=3 to compress all icons

Changes in 2.90 beta (08 Oct 2006):
  * LZMA algorithm support for most of the 32-bit and 64-bit file formats;
    use new option '--lzma' to enable
  * new format: BSD/elf386 supporting FreeBSD, NetBSD and OpenBSD
    via auto-detection of PT_NOTE or EI_OSABI
  * arm/pe: all the NRV compression methods are now supported